Fix menu pokemon list overflow issue

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: rgb(209, 211, 73);
+  min-height: 100vh;
 }
 
 .App-logo {
